# rtl-visual-editor

./: .gitignore  README.md  config.json.example  pyproject.toml
src/: cli.py  main.py
src/backend/: circuit_model.py  rtl_exporter.py  rtl_parser.py  timing_reasoner.py
src/editor/: editor_controller.py
src/llm/: layout_planner.py  llm_client.py
src/renderer/: block_item.py  circuit_renderer.py  wire_item.py
src/ui/: export_panel.py  input_panel.py  main_window.py  properties_panel.py
tests/: test_circuit_model.py  test_circuit_renderer.py  test_editor_controller.py  test_integration.py  test_layout_planner.py  test_llm_client.py  test_rtl_exporter.py  test_rtl_parser.py  test_timing_reasoner.py  test_ui.py
