[project]
name = "rtl-visual-editor"
version = "0.1.0"
description = "RTL Visualization Editor with LLM-powered layout planning"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.6.0",
    "openai>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-qt>=4.4.0",
]

[build-system]
requires = "setuptools>=61.0"
build-backend = "setuptools.build_meta"